deployment/manifests/zigbee2mqtt/zigbee2mqtt-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
    component: zigbee-router
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: zigbee2mqtt
    component: zigbee-router
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`zigbee2mqtt.hass.c6.montesg.xyz`)"
      kind: Rule
      services:
        - kind: Service
          name: zigbee2mqtt
          namespace: home-automation
          passHostHeader: true
          port: 8080
  tls:
    certResolver: le
    options:
      name: mutual-auth
      namespace: traefik
