deployment/manifests/zigbee2mqtt/zigbee2mqttassistant-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt-assistant
  labels:
    app: zigbee2mqtt-assistant
    component: zigbee-router
  namespace: home-automation
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
  selector:
    matchLabels:
      app: zigbee2mqtt-assistant
      component: zigbee-router
  template:
    metadata:
      labels:
        app: zigbee2mqtt-assistant
        component: zigbee-router
      namespace: home-automation
    spec:
      containers:
        - name: zigbee2mqtt-assistant
          image: carldebilly/zigbee2mqttassistant:linux-arm32
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: 200m
            limits:
              memory: "128Mi"
              cpu: 200m
      nodeSelector:
        beta.kubernetes.io/arch: arm
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-assistant
  labels:
    app: zigbee2mqtt-assistant
    component: zigbee-router
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: zigbee2mqtt-assistant
    component: zigbee-router
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-assistant
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`zigbee2mqtt.hass.c6.montesg.xyz`)"
      kind: Rule
      services:
        - kind: Service
          name: zigbee2mqtt-assistant
          namespace: home-automation
          passHostHeader: true
          port: 80
  tls:
    certResolver: le
    options:
      name: mutual-auth
      namespace: traefik
